--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,5 +34,5 @@ en:
     pagination:
       next: '<i class="bi bi-arrow-right-short paginationIcon"></i>'
       previous: '<i class="bi bi-arrow-left-short paginationIcon"></i>'
-      first: '<i class="bi bi-arrow-up-left-circle-fill paginationIcon"></i>'
-      last: '<i class="bi bi-arrow-up-right-circle-fill paginationIcon"></i>'
+      first: '<i class="bi bi-arrow-bar-left paginationIcon"></i>'
+      last: '<i class="bi bi-arrow-bar-right paginationIcon"></i>'
